ig.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.myteravpc.id

  tags = {
    Name = "myteravpc-igw"
  }
}
